--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,10 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# instruction files
+instructions/
+
+#doc files
+docs/
+backend/package-lock.json
